# eyeMod

./: CMakeLists.txt  README.md  Readme.md  libopencv_calib3d.2.4.9.dylib  libopencv_contrib.2.4.9.dylib  libopencv_core.2.4.9.dylib  libopencv_features2d.2.4.9.dylib  libopencv_flann.2.4.9.dylib  libopencv_gpu.2.4.9.dylib  libopencv_highgui.2.4.9.dylib  libopencv_imgproc.2.4.9.dylib  libopencv_legacy.2.4.9.dylib  libopencv_ml.2.4.9.dylib  libopencv_nonfree.2.4.9.dylib  libopencv_objdetect.2.4.9.dylib  libopencv_ocl.2.4.9.dylib  libopencv_photo.2.4.9.dylib  libopencv_stitching.2.4.9.dylib  libopencv_superres.2.4.9.dylib  libopencv_video.2.4.9.dylib  libopencv_videostab.2.4.9.dylib
eyeMod/: constants.h  findEyeCenter.cpp  main.cpp
eyeMod.xcodeproj/: project.pbxproj
eyeMod.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
eyeMod.xcodeproj/project.xcworkspace/xcuserdata/hamishjefford.xcuserdatad/: UserInterfaceState (Hamish's iMac's conflicted copy 2014-11-24 (1)).xcuserstate  UserInterfaceState (Hamish's iMac's conflicted copy 2014-11-24 (2)).xcuserstate  UserInterfaceState (Hamish's iMac's conflicted copy 2014-11-24).xcuserstate  UserInterfaceState (Hamish's iMac's conflicted copy 2014-11-27).xcuserstate  UserInterfaceState (Hamish's iMac's conflicted copy 2014-12-16 (1)).xcuserstate  UserInterfaceState (Hamish's iMac's conflicted copy 2014-12-16 (2)).xcuserstate  (+38 more)
openCVTest/: imageAdd.cpp  main.cpp
src/: CMakeLists.txt  constants.h  findEyeCenter.cpp  findEyeCenter.h  imageAdd.cpp  main.cpp
(+4 files in other folders)
